Bug 111552 - Geekbench 5.0 Vulkan compute benchmark fails on Anvil
Summary: Geekbench 5.0 Vulkan compute benchmark fails on Anvil
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Vulkan/intel (show other bugs)
Version: git
Hardware: Other All
: not set not set
Assignee: Intel 3D Bugs Mailing List
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-09-03 14:53 UTC by oscar garcia
Modified: 2019-09-07 09:26 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
attachment-23705-0.html (3.58 KB, text/html)
2019-09-07 09:26 UTC, oscar garcia
Details

Description oscar garcia 2019-09-03 14:53:03 UTC
running with ./geekbench5 --compute vulkan
I get:

Vulkan Information
  Device Name                   Intel(R) HD Graphics 530 (Skylake GT2)

Vulkan
  Running Sobel
geekbench_x86_64: src/geekbench/workload/vulkan/vulkan_kernel.h:126: void VulkanKernel::set_local_size(const std::array<uint32_t, 3> &): Assertion `cmd_buffer_.pool()->device()->properties().limits.maxComputeWorkGroupSize[i] >= local_size_[i]' failed.

on Windows OK..
on Windows maxComputeWorkGroupSize[0] and [1]are 1024 while on Anvil are 896..
so upping this limit should work..
Comment 1 Jason Ekstrand 2019-09-03 15:03:56 UTC
Give this a try:

https://gitlab.freedesktop.org/mesa/mesa/merge_requests/1856
Comment 2 Denis 2019-09-06 08:09:13 UTC
Hi Jason, I tested the patch - it works, all tests ran and passed (before patching (system 19.1.4) issue was reproduced and on my configuration)


  Running Gathering system information
System Information
  Operating System              Manjaro Linux 5.2.8-1-MANJARO x86_64
  Model                         HP HP ZBook 14u G4
  Motherboard                   HP 828C
  BIOS                          HP P78 Ver. 01.23

Processor Information
  Name                          Intel Core i7-7500U
  Topology                      1 Processor, 2 Cores, 4 Threads
  Identifier                    GenuineIntel Family 6 Model 142 Stepping 9
  Base Frequency                3.50 GHz
  L1 Instruction Cache          32.0 KB x 2
  L1 Data Cache                 32.0 KB x 2
  L2 Cache                      256 KB x 2
  L3 Cache                      4.00 MB

Memory Information
  Size                          15.5 GB

Vulkan Information
  Device Name                   Intel(R) HD Graphics 620 (Kaby Lake GT2)


Vulkan
  Running Sobel
  Running Canny
  Running Stereo Matching
  Running Histogram Equalization
  Running Gaussian Blur
  Running Depth of Field
  Running Face Detection
  Running Horizon Detection
  Running Feature Matching
  Running Particle Physics
  Running SFFT


Uploading results to the Geekbench Browser. This could take a minute or two 
depending on the speed of your internet connection.

Upload succeeded. Visit the following link and view your results online:

  https://browser.geekbench.com/v5/compute/33072

Visit the following link and add this result to your profile:

  https://browser.geekbench.com/v5/compute/33072/claim?key=831557
Comment 3 Jason Ekstrand 2019-09-06 18:28:04 UTC
Fixed by the following commit on master:

commit 3b1a7e5333335900293935399ce49a67562eafc7
Author: Jason Ekstrand <jason@jlekstrand.net>
Date:   Tue Sep 3 10:00:23 2019 -0500

    anv: Bump maxComputeWorkgroupSize
    
    Fixes: 9a129510f56f "anv: Bump maxComputeWorkgroupInvocations"
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=111552
    Reviewed-by: Lionel Landwerlin <lionel.g.landwerlin@intel.com>
Comment 4 oscar garcia 2019-09-07 09:26:11 UTC
Created attachment 145294 [details]
attachment-23705-0.html

Yes I also confirm it now works.. thanks..

El vie., 6 sept. 2019 a las 20:28, <bugzilla-daemon@freedesktop.org>
escribió:

> Jason Ekstrand <jason@jlekstrand.net> changed bug 111552
> <https://bugs.freedesktop.org/show_bug.cgi?id=111552>
> What Removed Added
> Status NEEDINFO RESOLVED
> Resolution --- FIXED
>
> *Comment # 3 <https://bugs.freedesktop.org/show_bug.cgi?id=111552#c3> on
> bug 111552 <https://bugs.freedesktop.org/show_bug.cgi?id=111552> from Jason
> Ekstrand <jason@jlekstrand.net> *
>
> Fixed by the following commit on master:
>
> commit 3b1a7e5333335900293935399ce49a67562eafc7
> Author: Jason Ekstrand <jason@jlekstrand.net>
> Date:   Tue Sep 3 10:00:23 2019 -0500
>
>     anv: Bump maxComputeWorkgroupSize
>
>     Fixes: 9a129510f56f "anv: Bump maxComputeWorkgroupInvocations"
>     Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=111552
>     Reviewed-by: Lionel Landwerlin <lionel.g.landwerlin@intel.com>
>
> ------------------------------
> You are receiving this mail because:
>
>    - You reported the bug.
>
>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.